tests/NormalTests/paczka1/small_fuzzy/63531754.err
Error in line 8: A275 A914 22,3
Error in line 2: 6GBOUTn5w A275 70,2
Error in line 6: HjOtdmFblI A914 33,9
Error in line 1: Wj9XrzcA2g A914 33,6
